--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swr": "^0.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
